Bug 211755 - Juk crashs on startup
Summary: Juk crashs on startup
Status: RESOLVED FIXED
Alias: None
Product: juk
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Unlisted Binaries Linux
: NOR crash
Target Milestone: ---
Assignee: Michael Pyne
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-10-25 10:45 UTC by Dimitrios Glentadakis
Modified: 2009-10-31 15:35 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Postpone initialization of the DBus interface until after setup is complete (633 bytes, patch)
2009-10-29 03:40 UTC, Michael Pyne
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Dimitrios Glentadakis 2009-10-25 10:45:15 UTC
Application that crashed: juk
Version of the application: 3.3
KDE Version: 4.3.2 (KDE 4.3.2)
Qt Version: 4.5.3
Operating System: Linux 2.6.31.5-desktop-1mnb i686
Distribution: "Mandriva Linux 2010.0"

What I was doing when the application crashed:
Juk crashs every time on startup. I tried to delete the config files in /home with no succes

 -- Backtrace:
Application: JuK (juk), signal: Segmentation fault
[KCrash Handler]
#6  Phonon::MediaObject::state (this=0x0) at /usr/src/debug/phonon-4.3.50/phonon/mediaobject.h:88
#7  0x080bd33e in PlayerManager::playing (this=0x8162180) at /usr/src/debug/kdemultimedia-4.3.2/juk/playermanager.cpp:96
#8  0x08122a6a in PlayerAdaptor::qt_metacall (this=0x965d390, _c=QMetaObject::InvokeMetaMethod, _id=9, _a=0xbf908abc) at /usr/src/debug/kdemultimedia-4.3.2/build/juk/playeradaptor.cpp:93
#9  0xb69ea75a in QDBusConnectionPrivate::deliverCall (this=0x95d7350, object=0x965d390, msg=@0x9723cc8, metaTypes=@0xbf908b7c, slotIdx=0) at qdbusintegrator.cpp:891
#10 0xb69eb982 in QDBusConnectionPrivate::activateCall (this=0x95d7350, object=0x965d390, flags=273, msg=@0x9723cc8) at qdbusintegrator.cpp:796
#11 0xb69ec342 in QDBusConnectionPrivate::activateObject (this=0x95d7350, node=@0x9723cb4, msg=@0x9723cc8, pathStartPos=-1081045972) at qdbusintegrator.cpp:1347
#12 0xb69ec5f8 in QDBusActivateObjectEvent::placeMetaCall (this=0x9723c88) at qdbusintegrator.cpp:1464
#13 0xb68e50b6 in QObject::event (this=0x8162180, e=0x9723c88) at kernel/qobject.cpp:1110
#14 0xb5eb968c in QApplicationPrivate::notify_helper (this=0x95cc880, receiver=0x8162180, e=0x9723c88) at kernel/qapplication.cpp:4065
#15 0xb5ec10ce in QApplication::notify (this=0xbf90a1c4, receiver=0x8162180, e=0x9723c88) at kernel/qapplication.cpp:3605
#16 0xb6e7fa21 in KApplication::notify (this=0xbf90a1c4, receiver=0x8162180, event=0x9723c88) at /usr/src/debug/kdelibs-4.3.2/kdeui/kernel/kapplication.cpp:302
#17 0xb68d4c4e in QCoreApplication::notifyInternal (this=0xbf90a1c4, receiver=0x8162180, event=0x9723c88) at kernel/qcoreapplication.cpp:610
#18 0xb68d58fc in QCoreApplicationPrivate::sendPostedEvents (receiver=0x0, event_type=0, data=0x95ab820) at ../../src/corelib/kernel/qcoreapplication.h:213
#19 0xb68d5abc in QCoreApplication::sendPostedEvents (receiver=0x0, event_type=0) at kernel/qcoreapplication.cpp:1140
#20 0xb6900dfd in postEventSourceDispatch (s=0x95d00b0) at ../../src/corelib/kernel/qcoreapplication.h:218
#21 0xb5493b92 in IA__g_main_context_dispatch (context=0x95cf6a0) at gmain.c:1960
#22 0xb5497468 in g_main_context_iterate (context=0x95cf6a0, block=<value optimized out>, dispatch=1, self=0x95cc150) at gmain.c:2591
#23 0xb549758e in IA__g_main_context_iteration (context=0x95cf6a0, may_block=1) at gmain.c:2654
#24 0xb6900931 in QEventDispatcherGlib::processEvents (this=0x95ccd98, flags={i = 36}) at kernel/qeventdispatcher_glib.cpp:407
#25 0xb5f5b4ba in QGuiEventDispatcherGlib::processEvents (this=0x95ccd98, flags={i = 36}) at kernel/qguieventdispatcher_glib.cpp:202
#26 0xb68d32ad in QEventLoop::processEvents (this=0x97076c8, flags=) at kernel/qeventloop.cpp:149
#27 0xb68d36f9 in QEventLoop::exec (this=0x97076c8, flags={i = 0}) at kernel/qeventloop.cpp:201
#28 0xb76a8547 in PulseSupport (this=0x970ee20) at /usr/src/debug/phonon-4.3.50/phonon/pulsesupport.cpp:644
#29 0xb76a85a8 in Phonon::PulseSupport::getInstance () at /usr/src/debug/phonon-4.3.50/phonon/pulsesupport.cpp:596
#30 0xb768f78d in Phonon::AudioOutputPrivate::init (this=0x970c2e0, c=Phonon::MusicCategory) at /usr/src/debug/phonon-4.3.50/phonon/audiooutput.cpp:102
#31 0x080bf3c1 in PlayerManager::setup (this=0x8162180) at /usr/src/debug/kdemultimedia-4.3.2/juk/playermanager.cpp:524
#32 0x080bfb56 in PlayerManager::setVolume (this=0x8162180, volume=1) at /usr/src/debug/kdemultimedia-4.3.2/juk/playermanager.cpp:295
#33 0x080ad90a in JuK::readConfig (this=0x95d2868) at /usr/src/debug/kdemultimedia-4.3.2/juk/juk.cpp:373
#34 0x080b09fe in JuK (this=0x95d2868, parent=0x0) at /usr/src/debug/kdemultimedia-4.3.2/juk/juk.cpp:96
#35 0x080b5f35 in JuKApplication::newInstance (this=0xbf90a1c4) at /usr/src/debug/kdemultimedia-4.3.2/juk/main.cpp:65
#36 0xb6e86fd3 in KUniqueApplicationAdaptor::newInstance (this=0x9680d20, asn_id=@0x95d2e10, args=@0x963a8f0) at /usr/src/debug/kdelibs-4.3.2/kdeui/kernel/kuniqueapplication.cpp:459
#37 0xb6e8772c in KUniqueApplicationAdaptor::qt_metacall (this=0x9680d20, _c=QMetaObject::InvokeMetaMethod, _id=0, _a=0xbf90986c)
    at /usr/src/debug/kdelibs-4.3.2/build/kdeui/kuniqueapplication_p.moc:75
#38 0xb69ea75a in QDBusConnectionPrivate::deliverCall (this=0x95d7350, object=0x9680d20, msg=@0x95d2058, metaTypes=@0xbf90992c, slotIdx=0) at qdbusintegrator.cpp:891
#39 0xb69eb982 in QDBusConnectionPrivate::activateCall (this=0x95d7350, object=0x9680d20, flags=337, msg=@0x95d2058) at qdbusintegrator.cpp:796
#40 0xb69ec342 in QDBusConnectionPrivate::activateObject (this=0x95d7350, node=@0x95d2044, msg=@0x95d2058, pathStartPos=-1081042468) at qdbusintegrator.cpp:1347
#41 0xb69ec5f8 in QDBusActivateObjectEvent::placeMetaCall (this=0x95d2018) at qdbusintegrator.cpp:1464
#42 0xb68e50b6 in QObject::event (this=0xbf90a1c4, e=0x95d2018) at kernel/qobject.cpp:1110
#43 0xb68d45aa in QCoreApplication::event (this=0xbf90a1c4, e=0x95d2018) at kernel/qcoreapplication.cpp:1434
#44 0xb5ebf2c8 in QApplication::event (this=0xbf90a1c4, e=0x95d2018) at kernel/qapplication.cpp:2317
#45 0xb5eb968c in QApplicationPrivate::notify_helper (this=0x95cc880, receiver=0xbf90a1c4, e=0x95d2018) at kernel/qapplication.cpp:4065
#46 0xb5ec10ce in QApplication::notify (this=0xbf90a1c4, receiver=0xbf90a1c4, e=0x95d2018) at kernel/qapplication.cpp:3605
#47 0xb6e7fa21 in KApplication::notify (this=0xbf90a1c4, receiver=0xbf90a1c4, event=0x95d2018) at /usr/src/debug/kdelibs-4.3.2/kdeui/kernel/kapplication.cpp:302
#48 0xb68d4c4e in QCoreApplication::notifyInternal (this=0xbf90a1c4, receiver=0xbf90a1c4, event=0x95d2018) at kernel/qcoreapplication.cpp:610
#49 0xb68d58fc in QCoreApplicationPrivate::sendPostedEvents (receiver=0x0, event_type=0, data=0x95ab820) at ../../src/corelib/kernel/qcoreapplication.h:213
#50 0xb68d5abc in QCoreApplication::sendPostedEvents (receiver=0x0, event_type=0) at kernel/qcoreapplication.cpp:1140
#51 0xb6900dfd in postEventSourceDispatch (s=0x95d00b0) at ../../src/corelib/kernel/qcoreapplication.h:218
#52 0xb5493b92 in IA__g_main_context_dispatch (context=0x95cf6a0) at gmain.c:1960
#53 0xb5497468 in g_main_context_iterate (context=0x95cf6a0, block=<value optimized out>, dispatch=1, self=0x95cc150) at gmain.c:2591
#54 0xb549758e in IA__g_main_context_iteration (context=0x95cf6a0, may_block=1) at gmain.c:2654
#55 0xb6900931 in QEventDispatcherGlib::processEvents (this=0x95ccd98, flags={i = 36}) at kernel/qeventdispatcher_glib.cpp:407
#56 0xb5f5b4ba in QGuiEventDispatcherGlib::processEvents (this=0x95ccd98, flags={i = 36}) at kernel/qguieventdispatcher_glib.cpp:202
#57 0xb68d32ad in QEventLoop::processEvents (this=0xbf90a134, flags=) at kernel/qeventloop.cpp:149
#58 0xb68d36f9 in QEventLoop::exec (this=0xbf90a134, flags={i = 0}) at kernel/qeventloop.cpp:201
#59 0xb68d5b90 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:888
#60 0xb5eb9504 in QApplication::exec () at kernel/qapplication.cpp:3525
#61 0x080b546e in main (argc=5, argv=0xbf90a3f4) at /usr/src/debug/kdemultimedia-4.3.2/juk/main.cpp:123

Reported using DrKonqi
Comment 1 Nicolas L. 2009-10-25 20:15:54 UTC
i can't reproduce on cooker.

Do you have your cooker up to date ? do you use pulseaudio ?


---
Nicolas Lécureuil
Mandriva KDE Team
Comment 2 Dimitrios Glentadakis 2009-10-25 21:19:38 UTC
cooker is up to date and i tested without pulseaudio too without success
Comment 3 Dario Andres 2009-10-25 21:41:49 UTC
This could be also Phonon related (using phonon 4.3.50 ?)
Comment 4 Dimitrios Glentadakis 2009-10-25 21:46:34 UTC
i have these packages installed

libphononexperimental4-4.3.50-15mdv2010.0
phonon-devel-4.3.50-15mdv2010.0
qt4-designer-plugin-phonon-4.5.3-2mdv2010.0
phonon-gstreamer-4.3.50-15mdv2010.0
phonon-xine-4.3.50-15mdv2010.0
phonon-debug-4.3.50-15mdv2010.0
libphonon4-4.3.50-15mdv2010.0
Comment 5 Michael Pyne 2009-10-29 03:40:12 UTC
Created attachment 37939 [details]
Postpone initialization of the DBus interface until after setup is complete

I think the problem is that the DBus interface for the playback portion of JuK is being accessed too early, while JuK is still starting up.

Can you test if the attached patch fixes your crash?  (I will still commit it anyways most likely as it's the right thing to do but I'd like to know if my guess is right).
Comment 6 Michael Pyne 2009-10-29 04:07:24 UTC
SVN commit 1042065 by mpyne:

Postpone DBus interface creation for the Player object until after it has been properly
setup.  Hopefully fixes bug 211755 as well.  This will be part of KDE 4.4.

CCBUG:211755


 M  +2 -1      playermanager.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1042065
Comment 7 Michael Pyne 2009-10-29 04:13:35 UTC
SVN commit 1042067 by mpyne:

Postpone creation of Player DBus object until after the player has been properly setup.
This hopefully also fixes bug 211755 (please reopen if it doesn't :)
This fix will be in KDE 4.3.3.

BUG:211755


 M  +1 -1      main.cpp  
 M  +2 -1      playermanager.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1042067
Comment 8 Dimitrios Glentadakis 2009-10-30 07:22:24 UTC
i didnt changed anything , but after the last update yesterday it works
juk-4.3.2-2mdv2010.0
phonon-gstreamer-4.3.50-18mdv2010.0
libphonon4-4.3.50-18mdv2010.0
qt4-designer-plugin-phonon-4.5.3-3mdv2010.0
libphononexperimental4-4.3.50-18mdv2010.0
phonon-debug-4.3.50-18mdv2010.0
phonon-xine-4.3.50-18mdv2010.0
phonon-devel-4.3.50-18mdv2010.0
Comment 9 Nicolas L. 2009-10-30 07:49:27 UTC
dimitrios this is because i added this patch on mandriva packages
Comment 10 Dimitrios Glentadakis 2009-10-31 15:28:24 UTC
it crashs again :(


Application: JuK (juk), signal: Segmentation fault
[Current thread is 1 (Thread 0xb4a806f0 (LWP 15274))]

Thread 3 (Thread 0xadd28b70 (LWP 15283)):
#0  __i686.get_pc_thunk.bx () at ../sysdeps/i386/i686/memcmp.S:53
#1  0xb5c61b39 in __libc_enable_asynccancel () at libc-cancellation.c:35
#2  0xb5c48230 in __poll (fds=0x975cbe0, nfds=2, timeout=-1) at ../sysdeps/unix/sysv/linux/poll.c:85
#3  0xb59bc896 in poll_func (ufds=0x975cbe0, nfds=2, timeout=-1, userdata=0x9874fa8) at pulse/thread-mainloop.c:75
#4  0xb59a994a in pa_mainloop_poll (m=0x975b9a8) at pulse/mainloop.c:879
#5  0xb59ab18d in pa_mainloop_iterate (m=0x975b9a8, block=1, retval=0x0) at pulse/mainloop.c:961
#6  0xb59ab264 in pa_mainloop_run (m=0x975b9a8, retval=0x0) at pulse/mainloop.c:979
#7  0xb59bc77e in thread (userdata=0x9875508) at pulse/thread-mainloop.c:94
#8  0xb536ac13 in internal_thread_func (userdata=0x975bac0) at pulsecore/thread-posix.c:72
#9  0xb5b54885 in start_thread () from /lib/i686/libpthread.so.0
#10 0xb5c5357e in clone () at ../sysdeps/unix/sysv/linux/i386/clone.S:130

Thread 2 (Thread 0xa941cb70 (LWP 15284)):
#0  pthread_mutex_lock (mutex=0x9896bb0) at forward.c:182
#1  0xb5369d6f in pa_mutex_lock (m=0x9896bb0) at pulsecore/mutex-posix.c:90
#2  0xb59bc8a0 in poll_func (ufds=0x9896b98, nfds=2, timeout=-1, userdata=0x9896bb0) at pulse/thread-mainloop.c:76
#3  0xb59a994a in pa_mainloop_poll (m=0x9896a68) at pulse/mainloop.c:879
#4  0xb59ab18d in pa_mainloop_iterate (m=0x9896a68, block=1, retval=0x0) at pulse/mainloop.c:961
#5  0xb59ab264 in pa_mainloop_run (m=0x9896a68, retval=0x0) at pulse/mainloop.c:979
#6  0xb59bc77e in thread (userdata=0x9896a40) at pulse/thread-mainloop.c:94
#7  0xb536ac13 in internal_thread_func (userdata=0x98966c0) at pulsecore/thread-posix.c:72
#8  0xb5b54885 in start_thread () from /lib/i686/libpthread.so.0
#9  0xb5c5357e in clone () at ../sysdeps/unix/sysv/linux/i386/clone.S:130

Thread 1 (Thread 0xb4a806f0 (LWP 15274)):
[KCrash Handler]
#6  0x080d9252 in PlaylistCollection::time (this=0x98d2fcc) at /usr/src/debug/kdemultimedia-4.3.2/juk/playlistcollection.cpp:124
#7  0x080f37ee in StatusLabel::updateData (this=0x98f6a18) at /usr/src/debug/kdemultimedia-4.3.2/juk/statuslabel.cpp:128
#8  0x080f42de in StatusLabel (this=0x98f6a18, playlist=0x0, parent=0x0) at /usr/src/debug/kdemultimedia-4.3.2/juk/statuslabel.cpp:97
#9  0x080ac3db in JuK::setupLayout (this=0x9899c68) at /usr/src/debug/kdemultimedia-4.3.2/juk/juk.cpp:147
#10 0x080b097d in JuK (this=0x9899c68, parent=0x0) at /usr/src/debug/kdemultimedia-4.3.2/juk/juk.cpp:88
#11 0x080b5f35 in JuKApplication::newInstance (this=0xbfe9d434) at /usr/src/debug/kdemultimedia-4.3.2/juk/main.cpp:65
#12 0xb6ef0fd3 in KUniqueApplicationAdaptor::newInstance (this=0x92e45c0, asn_id=@0x93e3928, args=@0x9739ab8) at /usr/src/debug/kdelibs-4.3.2/kdeui/kernel/kuniqueapplication.cpp:459
#13 0xb6ef172c in KUniqueApplicationAdaptor::qt_metacall (this=0x92e45c0, _c=QMetaObject::InvokeMetaMethod, _id=0, _a=0xbfe9cadc)
    at /usr/src/debug/kdelibs-4.3.2/build/kdeui/kuniqueapplication_p.moc:75
#14 0xb6a5475a in QDBusConnectionPrivate::deliverCall (this=0x92e99d8, object=0x92e45c0, msg=@0x935a898, metaTypes=@0x9385ef4, slotIdx=0) at qdbusintegrator.cpp:891
#15 0xb6a559f6 in QDBusConnectionPrivate::activateCall (this=0x92e99d8, object=0x92e45c0, flags=337, msg=@0x935a898) at qdbusintegrator.cpp:803
#16 0xb6a56342 in QDBusConnectionPrivate::activateObject (this=0x92e99d8, node=@0x935a884, msg=@0x935a898, pathStartPos=-1075196852) at qdbusintegrator.cpp:1347
#17 0xb6a565f8 in QDBusActivateObjectEvent::placeMetaCall (this=0x935a858) at qdbusintegrator.cpp:1464
#18 0xb694f0b6 in QObject::event (this=0xbfe9d434, e=0x935a858) at kernel/qobject.cpp:1110
#19 0xb693e5aa in QCoreApplication::event (this=0xbfe9d434, e=0x935a858) at kernel/qcoreapplication.cpp:1434
#20 0xb5f292c8 in QApplication::event (this=0xbfe9d434, e=0x935a858) at kernel/qapplication.cpp:2317
#21 0xb5f2368c in QApplicationPrivate::notify_helper (this=0x92e76e0, receiver=0xbfe9d434, e=0x935a858) at kernel/qapplication.cpp:4065
#22 0xb5f2b0ce in QApplication::notify (this=0xbfe9d434, receiver=0xbfe9d434, e=0x935a858) at kernel/qapplication.cpp:3605
#23 0xb6ee9a21 in KApplication::notify (this=0xbfe9d434, receiver=0xbfe9d434, event=0x935a858) at /usr/src/debug/kdelibs-4.3.2/kdeui/kernel/kapplication.cpp:302
#24 0xb693ec4e in QCoreApplication::notifyInternal (this=0xbfe9d434, receiver=0xbfe9d434, event=0x935a858) at kernel/qcoreapplication.cpp:610
#25 0xb693f8fc in QCoreApplicationPrivate::sendPostedEvents (receiver=0x0, event_type=0, data=0x92c6820) at ../../src/corelib/kernel/qcoreapplication.h:213
#26 0xb693fabc in QCoreApplication::sendPostedEvents (receiver=0x0, event_type=0) at kernel/qcoreapplication.cpp:1140
#27 0xb696adfd in postEventSourceDispatch (s=0x92f3c00) at ../../src/corelib/kernel/qcoreapplication.h:218
#28 0xb5510b92 in IA__g_main_context_dispatch (context=0x92f30a0) at gmain.c:1960
#29 0xb5514468 in g_main_context_iterate (context=0x92f30a0, block=<value optimized out>, dispatch=1, self=0x92ec448) at gmain.c:2591
#30 0xb551458e in IA__g_main_context_iteration (context=0x92f30a0, may_block=1) at gmain.c:2654
#31 0xb696a931 in QEventDispatcherGlib::processEvents (this=0x92e70b0, flags={i = 36}) at kernel/qeventdispatcher_glib.cpp:407
#32 0xb5fc54ba in QGuiEventDispatcherGlib::processEvents (this=0x92e70b0, flags={i = 36}) at kernel/qguieventdispatcher_glib.cpp:202
#33 0xb693d2ad in QEventLoop::processEvents (this=0xbfe9d3a4, flags=) at kernel/qeventloop.cpp:149
#34 0xb693d6f9 in QEventLoop::exec (this=0xbfe9d3a4, flags={i = 0}) at kernel/qeventloop.cpp:201
#35 0xb693fb90 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:888
#36 0xb5f23504 in QApplication::exec () at kernel/qapplication.cpp:3525
#37 0x080b546e in main (argc=5, argv=0xbfe9d664) at /usr/src/debug/kdemultimedia-4.3.2/juk/main.cpp:123
Comment 11 Dario Andres 2009-10-31 15:35:37 UTC
The new backtrace is a bug 193850. Thanks