Postpone creation of Player DBus object until after the player has been properly setup. This hopefully also fixes bug 211755 (please reopen if it doesn't :) This fix will be in KDE 4.3.3.

BUG:211755

svn path=/branches/KDE/4.3/kdemultimedia/juk/; revision=1042067