main.cpp
@@ -80,7 +80,7 @@ class JuKApplication : public KUniqueApplication
 int main(int argc, char *argv[])
 {
     KAboutData aboutData("juk", 0, ki18n("JuK"),
-                         "3.3", ki18n(description), KAboutData::License_GPL,
+                         "3.3.1", ki18n(description), KAboutData::License_GPL,
                          ki18n("© 2002 - 2009, Scott Wheeler"), KLocalizedString(),
                          "http://developer.kde.org/~wheeler/juk.html");
 
